added default input support

--- a/source/index.scss
+++ b/source/index.scss
@@ -3,6 +3,7 @@
 @import "_layout";
 @import "_typography";
 @import "_button";
+@import "_input";
 @import "_switcher";
 @import "_select";
 @import "_range";
