--- a/source/_typography.scss
+++ b/source/_typography.scss
@@ -117,4 +117,9 @@
         text-decoration: underline dotted;
         text-decoration: underline;
     }
+
+    hr{
+        margin: 0.5em 0 !important;
+        border-color: var(--zuik-color-text-second);
+    }
 }
