--- a/source/_helpers.scss
+++ b/source/_helpers.scss
@@ -15,6 +15,11 @@
     justify-content: space-between !important;
 }
 
+.flex-align-center {
+    display: flex !important;
+    align-items: center;
+}
+
 .bgc-transparent {
     background-color: transparent !important;
 }
