--- a/source/_grid.scss
+++ b/source/_grid.scss
@@ -12,6 +12,16 @@
     padding-right: .5em;
     width: 100%;
 
+    &-group {
+        box-shadow: 0 0 0 .5em var(--zuik-color-bg-second);
+        margin: 0 -.5em;
+        padding: .5em;
+
+        &:last-of-type {
+            padding-bottom: 0;
+        }
+    }
+
     &-row {
         background-color: var(--zuik-color-bg-main);
         color: var(--zuik-color-text-main);
@@ -40,7 +50,7 @@
     &-col {
         flex: 1 0 0%;
 
-        &>*:first-of-type{
+        &>*:first-of-type {
             margin-left: 0;
         }
 
@@ -53,10 +63,10 @@
             &-#{$i} {
                 @include make-col($i, 12);
 
-                &>*:first-of-type{
+                &>*:first-of-type {
                     margin-left: 0;
                 }
-        
+
                 &>*:last-of-type {
                     margin-bottom: 0;
                     margin-right: 0;
