--- a/source/_typography.scss
+++ b/source/_typography.scss
@@ -2,7 +2,7 @@
     font-weight: 500;
     line-height: 1.2;
     margin-bottom: 0.5em;
-    margin-top: 0.5em;
+    margin-top: 0;
     user-select: text;
 }
 
