removed extra zero

--- a/source/_table.scss
+++ b/source/_table.scss
@@ -16,7 +16,7 @@
     >:not(caption)>*>* {
         background-color: transparent;
         border-bottom-width: 1px;
-        padding: 0.5rem 0.5rem;
+        padding: .5rem;
     }
 
     >:not(:first-child) {
