--- a/source/_switcher.scss
+++ b/source/_switcher.scss
@@ -24,7 +24,7 @@
         content: '';
         display: block;
         height: 1.4em;
-        left: 0.3em;
+        left: .3em;
         position: absolute;
         top: calc(50% - .7em);
         transition: all .2s;
