--- a/source/_typography.scss
+++ b/source/_typography.scss
@@ -1,7 +1,7 @@
 %header {
     font-weight: 500;
     line-height: 1.2;
-    margin-bottom: 0.5em;
+    margin-bottom: .5em;
     margin-top: 0;
     user-select: text;
 }
@@ -71,7 +71,7 @@
     mark {
         background-color: transparent;
         color: var(--zuik-color-text-second);
-        padding: 0.2em;
+        padding: .2em;
     }
 
     &-del,
@@ -119,7 +119,7 @@
     }
 
     hr{
-        margin: 0.5em 0 !important;
+        margin: .5em 0 !important;
         border-color: var(--zuik-color-text-second);
     }
 }
