--- a/source/_input.scss
+++ b/source/_input.scss
@@ -1,7 +1,7 @@
 .zuik-input {
     appearance: none;
     background: transparent;
-    border-radius: 0.35em;
+    border-radius: .35em;
     border: 1px solid var(--zuik-color-text-second);
     box-shadow: none;
     color: var(--zuik-color-text-main);
@@ -13,7 +13,7 @@
     line-height: 1;
     margin: 0;
     max-width: 100%;
-    padding: 0 0.5em;
+    padding: 0 .5em;
     position: relative;
     text-overflow: ellipsis;
     width: 100%;
