--- a/source/_select.scss
+++ b/source/_select.scss
@@ -5,7 +5,7 @@
     background-position: right 1em top calc(.85em), right .68em top calc(.85em);
     background-repeat: no-repeat;
     background-size: .4em .4em;
-    border-radius: 0.35em;
+    border-radius: .35em;
     border: 1px solid var(--zuik-color-text-second);
     box-shadow: none;
     color: var(--zuik-color-text-main);
@@ -17,7 +17,7 @@
     line-height: 1;
     margin: 0;
     max-width: 100%;
-    padding: 0 1.7em 0 0.5em;
+    padding: 0 1.7em 0 .5em;
     position: relative;
     text-overflow: ellipsis;
     width: 100%;
